[package]
name = "rumqttd"
description = "Distributed, embeddable mqtt broker library"
license = "Apache-2.0"
version = "0.10.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
categories = ["network-programming"]
repository = "https://github.com/bytebeamio/rumqtt/"

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "time", "net", "io-util", "macros"]}
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.66"
bytes = "1.0.1"
flume = "0.10.9"
slab = "0.4.3"
log = "0.4.14"
thiserror = "1.0.24"
tokio-rustls =  { version = "0.22.0", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rustls-pemfile = { version = "0.2.1", optional = true }
tokio-tungstenite = { version = "0.15.0", optional = true }
rouille = "3.1.1"
futures-util = "0.3.16"
parking_lot = "0.11.2"
reqwest = { version = "0.11", features = ["json"] }
figment = { version = "0.10.5", features = ["toml", "env"] }
fnv = "1.0.7"
sha2 = "0.9.5"
pretty_env_logger = "0.4.0"

[features]
default = ["rustls"]
rustls = ["tokio-rustls", "rustls-pemfile"]
native-tls = ["tokio-native-tls"]
websocket = ["tokio-tungstenite"]

[dev-dependencies]
figment = { version = "0.10.5", features = ["toml", "env"] }
jemallocator = "0.3.2"
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }
mqttbytes = "0.6"
pretty_assertions = "0.7.2"
tempfile = "3.2.0"
